Fix spacing at top of pages

--- a/src/app/pages/calendar/calendar.css
+++ b/src/app/pages/calendar/calendar.css
@@ -1,4 +1,5 @@
 .this {
+  padding-top: 18px;
   background-color: #aaa;
 
   padding-right: 0;
