--- a/src/app/pages/group/group.css
+++ b/src/app/pages/group/group.css
@@ -1,3 +1,7 @@
+.this {
+  padding-top: 20px;
+}
+
 h1 {
   text-align: center;
   padding-bottom: 20px;
