--- a/src/app/pages/join/join.css
+++ b/src/app/pages/join/join.css
@@ -1,3 +1,7 @@
+.this {
+  padding-top: 20px;
+}
+
 form {
   padding-top: 20px;
   width: 300px;
